<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.dashboard.DashboardActivity">

  <com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@android:color/transparent"
    app:elevation="@dimen/no_space">

    <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <androidx.cardview.widget.CardView
        android:id="@+id/cardProfile"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="end|center_vertical"
        android:layout_margin="@dimen/default_space"
        app:cardCornerRadius="18dp">

        <ImageView
          android:layout_width="24dp"
          android:layout_height="24dp"
          android:layout_gravity="center"
          android:src="@drawable/ic_baseline_person_24"
          app:tint="@color/primary" />

      </androidx.cardview.widget.CardView>

    </FrameLayout>

  </com.google.android.material.appbar.AppBarLayout>

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <androidx.cardview.widget.CardView
        android:id="@+id/cardPolyclinic"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="@dimen/default_space"
        android:layout_marginTop="@dimen/default_space"
        android:layout_marginEnd="@dimen/medium_space"
        app:cardBackgroundColor="@color/purple"
        app:cardCornerRadius="@dimen/default_card_corner_radius"
        app:cardElevation="@dimen/default_card_elevation"
        app:layout_constraintEnd_toStartOf="@id/cardDoctor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <androidx.cardview.widget.CardView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_margin="@dimen/default_space"
            app:cardCornerRadius="@dimen/large_space"
            app:cardElevation="@dimen/no_space"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="@dimen/medium_space"
              android:src="@drawable/ic_hospital" />

          </androidx.cardview.widget.CardView>

          <TextView
            android:id="@+id/textPolyclinicCount"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_space"
            android:layout_marginEnd="@dimen/default_space"
            android:text="N/a"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/textPolyclinicSubtitle" />

          <TextView
            android:id="@+id/textPolyclinicSubtitle"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_space"
            android:text="@string/polyclinics"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
        android:id="@+id/cardDoctor"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="@dimen/medium_space"
        android:layout_marginTop="@dimen/default_space"
        android:layout_marginEnd="@dimen/medium_space"
        app:cardBackgroundColor="@color/pink"
        app:cardCornerRadius="@dimen/default_card_corner_radius"
        app:cardElevation="@dimen/default_card_elevation"
        app:layout_constraintEnd_toStartOf="@id/cardPatient"
        app:layout_constraintStart_toEndOf="@id/cardPolyclinic"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <androidx.cardview.widget.CardView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_margin="@dimen/default_space"
            app:cardCornerRadius="@dimen/large_space"
            app:cardElevation="@dimen/no_space"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="@dimen/medium_space"
              android:src="@drawable/ic_doctor" />

          </androidx.cardview.widget.CardView>

          <TextView
            android:id="@+id/textDoctorCount"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_space"
            android:layout_marginEnd="@dimen/default_space"
            android:text="N/a"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/textDoctorSubtitle" />

          <TextView
            android:id="@+id/textDoctorSubtitle"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_space"
            android:text="@string/doctors"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
        android:id="@+id/cardPatient"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="@dimen/medium_space"
        android:layout_marginTop="@dimen/default_space"
        android:layout_marginEnd="@dimen/default_space"
        app:cardBackgroundColor="@color/orange"
        app:cardCornerRadius="@dimen/default_card_corner_radius"
        app:cardElevation="@dimen/default_card_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardDoctor"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <androidx.cardview.widget.CardView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_margin="@dimen/default_space"
            app:cardCornerRadius="@dimen/large_space"
            app:cardElevation="@dimen/no_space"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="@dimen/medium_space"
              android:src="@drawable/ic_patient" />

          </androidx.cardview.widget.CardView>

          <TextView
            android:id="@+id/textPatientCount"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_space"
            android:layout_marginEnd="@dimen/default_space"
            android:text="N/a"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/textPatientSubtitle" />

          <TextView
            android:id="@+id/textPatientSubtitle"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_space"
            android:text="@string/patients"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

      </androidx.cardview.widget.CardView>

      <TextView
        android:id="@+id/textQueueHeader"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_space"
        android:layout_marginTop="@dimen/large_space"
        android:text="Antrian Hari Ini"
        app:layout_constraintTop_toBottomOf="@id/cardPatient" />

      <FrameLayout
        android:id="@+id/frameLayoutDashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/textQueueHeader">

        <RelativeLayout
          android:id="@+id/relativeLayoutDashboard"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/medium_space"
          android:layout_marginBottom="@dimen/medium_space"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView_courseHeader"
          tools:ignore="UselessParent">

          <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayoutDashboard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_space"
            app:tabBackground="@drawable/selector_chip_tab_layout"
            app:tabIndicatorHeight="@dimen/no_space"
            app:tabMinWidth="@dimen/no_space"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/primary" />

        </RelativeLayout>

      </FrameLayout>

      <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager2Dashboard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:nestedScrollingEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayoutDashboard" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.core.widget.NestedScrollView>

  <ProgressBar
    android:id="@+id/progressBarDashboard"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>